add master logic

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,6 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 kafka.server=localhost:9092
 kafka.group.id=group2
 
+server.port = 9000
+
 
